# learn_FastAPI_for_AI

./: .gitignore  pyproject.toml
src/: main.py
src/ai/: base.py  gemini.py
src/prompts/: system_prompt.md
